# seyuna-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  release.config.mjs  test.sh
.github/workflows/: publish.yml  release.yml
js/: deno-install.ts  deno-wrapper.ts  node-install.js
npm/darwin/: package.json
npm/linux/: package.json
npm/main/: install.js  package.json
npm/win32/: package.json
src/: main.rs  schema.rs
src/config/: init.rs  mod.rs  types.rs
src/helpers/: cli.rs  fs.rs  mod.rs
src/ui/: compile.rs  default.rs  mod.rs  reset.css  types.rs
