[package]
name = "seyuna"
version = "1.0.0-canary.3"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "cargo"] }
indexmap = { version = "2.10.0", features = ["serde"] }
lightningcss = "1.0.0-alpha.67"
notify = "8.1.0"
once_cell = "1.21.3"
owo-colors = "4.2.2"
schemars = { version = "1.0.3", features = ["indexmap2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
spinach = "3.1.0"
tokio = { version = "1.46.0", features = ["full"] }
